--- a/assets/css/homepage_BO.css
+++ b/assets/css/homepage_BO.css
@@ -166,3 +166,26 @@ li ul:hover{
 .borderTD {
     border: solid 2px black;
 }
+.OK {
+    position: absolute;
+    text-decoration: none;
+    top:400px;
+    left: 39%;
+}
+.oui {
+    background-color: greenyellow;
+    color: black;
+    text-decoration: none;
+    width: 50px;
+    border: solid 1px black;
+    padding: 5px;
+    margin-left: 5px;
+}
+.non {
+    background-color: red;
+    color: black;
+    text-decoration: none;
+    border: solid 1px black;
+    padding: 5px;
+    margin-left: 5px;
+}
