--- a/back_office/assets/css/homepage_BO.css
+++ b/back_office/assets/css/homepage_BO.css
@@ -148,16 +148,17 @@ li ul:hover{
     margin: auto;
     margin-top: 20px;
 }
-.errorRed {
+.error {
     text-align: center;
     color: red;
     font-weight: 500;
     font-size: larger;
 }
-.error {
+.success {
     text-align: center;
     font-weight: 500;
     font-size: larger;
+    color:greenyellow;
 }
 .tableCat {
     display: flex;
